[project]
name = "pg-discover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.1",
    "fastapi>=0.119.1",
    "polars>=1.34.0",
    "psycopg[binary]>=3.2.11",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "black>=25.9.0",
    "debugpy>=1.8.17",
    "ruff>=0.14.1",
]
