[project]
name = "pg-schema-explorer"
version = "0.1.0"
description = "A FastAPI application to explore PostgreSQL database schemas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.1",
    "fastapi>=0.119.1",
    "polars>=1.34.0",
    "psycopg[binary]>=3.2.11",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
